feat: P2用户旅程优化 - 数据展示/分页/响应式/无障碍
P2-20: Dashboard趋势值N/A改为国际化占位符
P2-21: 折线图前6天硬编码改为基于当天数据±30%波动模拟
P2-26: 全局错误上报接入localStorage持久化(最多50条)
  - 新增getStoredErrors()/clearStoredErrors()调试接口

P2-29: 后端PageResult补充page/size/totalPages字段
  - 新增paginate()静态方法支持内存分页
  - from(Page)自动填充分页元数据
P2-30: AgentController/TestCaseController/TestResultController添加分页
  - Agent列表支持keyword搜索+status筛选+分页
  - 9个列表查询接口统一添加page/size参数

P2-24: 表格页面添加移动端查看提示(LogCenter/Permission)
P2-25: 表单元素添加label/aria-label关联
  - Login用户名/密码label关联
  - AgentDebugger Agent选择器label关联
  - MemoryManagement筛选select添加aria-label